Fixed section spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,6 +28,10 @@ html {
 /* Reusable Components */
 /* ------------------------------------------------ */
 
+section {
+  padding: 80px 0;
+}
+
 .box {
   padding: 1%;
 }
@@ -246,9 +250,6 @@ header {
 .section-features .long-copy {
   margin-bottom: 30px;
 }
-.section-features {
-  margin-bottom: 30px;
-}
 
 /* ------------------------------------------------ */
 /* Meals */
@@ -327,10 +328,6 @@ header {
 
 .app-screen {
   width: 40%;
-}
-
-.works-step {
-  margin-bottom: 50px;
 }
 
 .works-step div {
@@ -429,7 +426,6 @@ cite img {
   width: 90%;
   margin-left: 5%;
   box-shadow: 0 2px 2px #efefef;
-  margin-bottom: 30px;
 }
 
 .plan-box div {
